updating swagger files
